# twitter-monitor

./: .gitignore  README.md  main.py  monitor_base.py  profile_monitor.py  pyproject.toml  telegram_notifier.py
config/: monitoring.json.template  token.json.template
cookies/: yourusername.json
