[project]
name = "twitter-monitor"
version = "0.1.0"
description = "A Python-based monitoring and notification system for X"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brotli",
    "bs4",
    "click",
    "httpx",
    "python-telegram-bot==13.15",
    "requests",
    "retry",
    "setuptools<81",
    "standard-imghdr",
    "tzlocal==2.1",
    "urllib3<2",
    "xclienttransaction>=1.0.1",
]