[project]
name = "twitter-monitor"
version = "0.2.0"
description = "A Python-based monitoring and notification system for X"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10.4",
    "brotli",
    "bs4",
    "click",
    "httpx",
    "pytelegrambotapi>=4.15.0",
    "requests",
    "retry",
    "tzlocal",
    "xclienttransaction>=1.0.1",
]